0030305: Strange logic in BRepMesh_Deflection::ComputeDeflection(...) method

Before the fix, angular deflection was scaled to some coefficient in the method BRepMesh_Deflection::ComputeDeflection(...). Now, angular deflection is constant.